feat: add Dto models

--- a/RepairPK/appsettings.json
+++ b/RepairPK/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MySQLinDB": "server=127.0.0.1;database=oopdb;User=root;Password=PHW#84#jeor"
+  }
 }
