--- a/RepairPK/RepairPK.csproj
+++ b/RepairPK/RepairPK.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="7.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Exception\" />
+  </ItemGroup>
+
 </Project>
